--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "axios",
   "main": "./dist/axios.js",
-  "version": "0.23.0",
-  "homepage": "https://axios-http.com",
+  "version": "0.17.1",
+  "homepage": "https://github.com/axios/axios",
   "authors": [
     "Matt Zabriskie"
   ],
